--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "ignore": "find ./dist -type f -exec sed -i \"s/var _interopRequire/\\/* istanbul ignore next *\\/\\nvar _interopRequire/g\" {} ;",
     "babel": "babel src -d dist",
     "bundle": "browserify dist/index.js -o dist/client.js",
+    "clean": "rm -rf dist && mkdir dist",
     "minify": "uglifyjs dist/client.js -m -c drop_console,dead_code -d debug=false -o dist/client.min.js",
-    "build": "npm run babel && npm run ignore && npm run bundle && npm run minify",
+    "build": "npm run clean && npm run babel && npm run ignore && npm run bundle && npm run minify",
     "test": "browserify test/client.js -o dist/test.js && start test/index.html",
     "coverage": "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && rm -rf ./coverage",
     "watch": "watch \"npm run build && npm test\" src/ test/"
