--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "babel": "^4.6.3",
     "browserify": "^9.0.3",
     "chai": "^2.3.0",
-    "rijs.core": "git://github.com/rijs/core",
-    "rijs.data": "git://github.com/rijs/data",
     "coveralls": "^2.11.2",
     "istanbul": "^0.3.13",
     "mocha": "^2.2.4",
     "mocha-lcov-reporter": "0.0.2",
+    "popper": "0.0.2",
+    "rijs.core": "git://github.com/rijs/core",
+    "rijs.data": "git://github.com/rijs/data",
     "uglify-js": "^2.4.16"
   },
   "dependencies": {
