--- a/.popper.yml
+++ b/.popper.yml
@@ -2,7 +2,7 @@ globals:
   - <script src="https://cdn.polyfill.io/v1/polyfill.min.js"></script>
   - <script src="https://cdnjs.cloudflare.com/ajax/libs/chai/3.0.0/chai.min.js"></script>
 
-tests: (npm run build > /dev/null) && browserify ./test/client.js
+tests: (npm run build > /dev/null) && browserify ./test.js
   -i colors
   -i chai
   | sed -E "s/require\('chai'\)/window.chai/"
